# blindspot-mcp

./: .dockerignore  .gitignore  CASE_STUDY.md  CHANGELOG.md  Dockerfile  NOTICE  README.md  SECURITY.md  pyproject.toml  sbom.json
.github/workflows/: ci.yml  release.yml
benchmark/: run.py
benchmark/cases/: __init__.py
docs/: demo.md  deploy.md  performance.md  phase-c-methodology.md  positioning.md  prevalence-findings.md  privacy.md
fixtures/: README.md  clean_server.py  compose_files_server.py  compose_mailer_server.py  compose_web_server.py  egress_server.py  hostile_upstream.py  memory_server.py  mutating_server.py  poisoned_tool_server.py  scratch_client.py  tagged_server.py  vulnerable_server.py
scripts/: case-study-stats.py
spec/: convention.md  schema.json
src/airlock/: __init__.py  cli.py  compose.py  ledger.py  ledger_report.py  lockfile.py  onboard.py  report.py  sanitize.py
src/airlock/enforce/: dlp.py  infer.py  keys.py  middleware.py  proxy.py  taintbus.py
src/airlock/prevalence/: __init__.py  acquire.py  harness.py
src/airlock/provenance/: __init__.py  emit.py  integrity.py  tagger.py
src/airlock/redteam/: __init__.py  adaptive.py  catalog.py
src/airlock/scan/: client.py  drift.py  leastpriv.py  memory.py  remediate.py  source.py
src/blindspot/: __init__.py  cli.py  compose.py  ledger.py  lockfile.py  models.py  report.py
src/blindspot/enforce/: __init__.py  broker.py  infer.py  middleware.py  proxy.py
study/: breadth_manifest.json  community_manifest.json  example_manifest.json  reference_servers_manifest.json
tests/: test_acquire.py  test_audit_fixes.py  test_benchmark.py  test_broker.py  test_compose.py  test_compose_calibration.py  test_detectors.py  test_dlp.py  test_enforcer.py  test_fixtures_stage1.py  test_infer.py  test_init_cli.py  test_integration_phase2.py  test_keys.py  test_leastpriv.py  test_ledger.py  test_ledger_report.py  test_lockfile.py  test_memory.py  test_onboard.py  test_prevalence.py  test_proxy.py  test_proxy_drift.py  test_proxy_egress.py  test_proxy_exec.py  test_proxy_sampling.py  test_proxy_shared_taint.py  test_redteam.py  test_resilience.py  test_scan_integration.py  test_sep1913.py  test_signing.py  test_source_scan.py  test_taintbus.py  test_tool_surface.py  test_unicode_fp.py
(+19 files in other folders)
